--- a/cambridge_grammar.tex
+++ b/cambridge_grammar.tex
@@ -102,15 +102,13 @@ categories.
 First, we divide the class of categories in two: the \textbf{lexical categories} and the
 \textbf{phrasal categories}. Every ultimate constituent (i.e. word) of the sentence belongs to a
 lexical category. A higher-level structure that depends on a central word and which may contain more
-than one word is typically a phrasal category.
-
-There are other classes of syntactic structure. These include coordination and supplementation.
+than one word is a phrasal category.
 
 \paragraph{Lexical categories}
 
-The lexical categories consist of the `parts of speech', these being noun (N), verb (V), adjective
-(Adj), adverb (Adv), preposition (Prep), determinative (D), subordinator, coordinator, and
-interjection.
+The lexical categories consist of the `parts of speech'. Principal among these are: noun (N), verb
+(V), adjective (Adj), adverb (Adv), preposition (Prep), determinative (D), subordinator,
+coordinator, and interjection.
 
 Thus, `a' is a determiner and `bird' is a noun. The syntax tree in Figure
 \ref{fig:abirdhitthecar_lexical}, gives lexical-category labels for each of the words in `a bird hit
@@ -132,7 +130,7 @@ For example, a phrase consisting of a noun and supporting constituents is a \tex
 nominal together with a determinative is a \textbf{noun phrase}; a verb with its supporting
 constituents is a \textbf{verb phrase}; a noun phrase with a verb phrase is a \textbf{clause}.
 
-The complete set of phrasal categories is: Clause (Clause), verb phrase (VP), noun phrase (NP),
+The principal phrasal categories are: Clause (Clause), verb phrase (VP), noun phrase (NP),
 nominal (N), adjective phrase (AdjP), adverb phrase (AdvP), preposition phrase (PP), and
 determinative phrase (DP).
 
@@ -196,11 +194,15 @@ functions. Whereas the phrase `the key' is always a noun phrase in any context, 
 function depends fundamental on the context. In the clause, `the key is shiny', the phrase `the key'
 is a subject. But the same phrase is an object in the clause, `Bob stole the key'.
 
-Not every construction has a head. The noun phrase `fish and chips' has no head! In addition to
-being a noun phrase, `fish and chips' has the syntactic structure of \textbf{coordination}, this
-being a relation between two or more elements of syntactically equal status, the
-\textbf{coordinates}, usually linked by a \textbf{coordinator} such as \emph{and} or \emph{or}.
+Not every construction has a head. The phrase `fish and chips' is, syntactically, a NP-coordination.
+This is syntactic structure we have not yet seen so far. It is a NP and  also a
+\textbf{coordination}, this being a relation between two or more elements of syntactically equal
+status, the \textbf{coordinates}, usually linked by a \textbf{coordinator} such as \emph{and} or
+\emph{or}.
 
-
+Notably, `fish and chips' has no head. Instead it has two dependents, the coordinate `fish' and the
+coordinate `and chips', each of which is a NP. The phrase `and chips' can be further analysed into
+the marker `and' (a coordinator) and the coordinate `chips' (a NP). An example similar to this, `Kim
+and Pat' is diagrammed in Chapter 11, Section 1.1 of CGEL.
 
 \end{document}
