change quotes to italic discussion of morphology

--- a/cambridge_grammar.tex
+++ b/cambridge_grammar.tex
@@ -12,12 +12,10 @@
 
 These are my notes on \emph{The Cambridge Grammar of the English Language} (CGEL).
 
-\section{Basic concepts}
+\section{Grammar as a description of English}
 
-\subsection{Grammar as a description of English}
-
-A grammar of a language is one that aims to ‘describe the principles or rules governing the form and
-meaning of words, phrases, clauses and sentences’. It has two parts \textbf{syntax} and
+A grammar of a language is one that aims to `describe the principles or rules governing the form and
+meaning of words, phrases, clauses and sentences'. It has two parts \textbf{syntax} and
 \textbf{morphology}. The former being concerned with the way in which words form larger units
 (phrases, clauses, sentences) and the latter with the construction of words themselves.
 
@@ -38,20 +36,21 @@ For example, \emph{grape} is a prototypical noun: it denotes a physical object, 
 inflectional form contrast between singular and plural, it functions as the head of a noun phrase.
 However, the noun \emph{equipment} shows no such inflectional form.
 
-Likewise, in ‘race discrimination’, the noun race does not act as head of a noun phrase. Instead, it
-is a modifier of the noun ‘discrimination’. However, this does not make ‘race’ an adjective. The
+Likewise, in \emph{race discrimination}, the noun race does not act as head of a noun phrase. Instead, it
+is a modifier of the noun \emph{discrimination}. However, this does not make \emph{race} an adjective. The
 word race does not satisfy many of the other characteristics of adjective. For example, it cannot be
-used predicatively: ‘I am race’ is ungrammatical.
+used predicatively: \emph{I am race} is ungrammatical.
+
 
 Put another way, the grammar is not sufficient, by itself, to determine what is and what is not a
 noun. This discrimination can only be established by something external: the observation of how we
 use particular words or phrases in practice.
 
 My thought on the matter is that a grammar is simply descriptive in the same sense that Linnaeus’
-taxonomy is descriptive. In each case, there is something ‘out there’ that we are attempting to
+taxonomy is descriptive. In each case, there is something \emph{out there} that we are attempting to
 codify. But the thing itself (be it the relationships between biological species or the construction
-of English language sentences) has no intrinsic \emph{formal} structure. There will always be ‘edge
-cases’ that are difficult to pin down.
+of English language sentences) has no intrinsic \emph{formal} structure. There will always be `edge
+cases' that are difficult to pin down.
 
 
 \section{The components of the grammar}
@@ -77,21 +76,22 @@ These three principles correspond and lead to the notions of \textbf{constituent
 Consider the foundational notion that a sentence can be divided into parts, each of which may also
 be divided into parts, called \textbf{constituents}.
 
-Figure \ref{fig:abirdhitthecar} shows one way to decompose the clause, `a bird hit the car' as a
-hierarchy of constituents.
+Figure \ref{fig:abirdhitthecar} shows one way to decompose the clause, \emph{a bird hit the car} as
+a hierarchy of constituents.
 
 \begin{figure}[ht]
-\Tree [.{} [.{} [.{} a ] [.{} bird ]  ] [.{} [.{} [.{} hit ] ] [.{} [.{} the ] [.{} car ]]  ] ]
-\caption{A syntax tree for a simple sentence}
-\label{fig:abirdhitthecar}
+    \Tree [.{} [.{} [.{} a ] [.{} bird ]  ] [.{} [.{} [.{} hit ] ] [.{} [.{} the ] [.{} car ]]  ] ]
+    \caption{A syntax tree for a simple sentence}
+    \label{fig:abirdhitthecar}
 \end{figure}
 
-In this diagram, the phrases `a bit' and `hit the car' are the \textbf{immediate constitutions} and
-the leaf nodes (here words) are the \textbf{ultimate constituents} of the sentence.
+In this diagram, the phrases \emph{a bit} and \emph{hit the car} are the \textbf{immediate
+constitutions} and the leaf nodes (here words) are the \textbf{ultimate constituents} of the
+sentence.
 
-Evidently, this is not the only possible way to impose a hierarchy on (equally to \emph{analyse}) `a
-bird hit the car'. That this is the \emph{correct} analysis can only be appreciated by bringing to
-bear other aspects of the grammar.
+Evidently, this is not the only possible way to impose a hierarchy on (equally to \emph{analyse})
+\emph{a bird hit the car}. That this is the \emph{correct} analysis can only be appreciated by
+bringing to bear other aspects of the grammar.
 
 \subsubsection{Syntactic categories}
 
@@ -110,14 +110,14 @@ The lexical categories consist of the `parts of speech'. Principal among these a
 (V), adjective (Adj), adverb (Adv), preposition (Prep), determinative (D), subordinator,
 coordinator, and interjection.
 
-Thus, `a' is a determiner and `bird' is a noun. The syntax tree in Figure
-\ref{fig:abirdhitthecar_lexical}, gives lexical-category labels for each of the words in `a bird hit
-the car'. 
+Thus, \emph{a} is a determiner and \emph{bird} is a noun. The syntax tree in Figure
+\ref{fig:abirdhitthecar_lexical}, gives lexical-category labels for each of the words in \emph{a
+bird hit the car}. 
 
 \begin{figure}[ht]
-\Tree [.{} [.{} [.D a ] [.N bird ]  ] [.{} [.{} [.V hit ] ] [.{} [.D the ] [.N car ]]  ] ]
-\caption{A syntax tree with lexical category labels}
-\label{fig:abirdhitthecar_lexical}
+    \Tree [.{} [.{} [.D a ] [.N bird ]  ] [.{} [.{} [.V hit ] ] [.{} [.D the ] [.N car ]]  ] ]
+    \caption{A syntax tree with lexical category labels}
+    \label{fig:abirdhitthecar_lexical}
 \end{figure}
 
 \paragraph{Phrasal categories}
@@ -138,12 +138,12 @@ Figure \ref{fig:abirdhitthecar_phrasal} supplements our previous diagram with th
 phrasal category labels.
 
 \begin{figure}[ht]
-\Tree [.{Clause} [.{NP} [.D a ] [.N bird ]  ] [.{VP} [.{} [.V hit ] ] [.{NP} [.D the ] [.N car ]]  ] ]
-\caption{A syntax tree with phrasal and lexical category labels}
-\label{fig:abirdhitthecar_phrasal}
+    \Tree [.{Clause} [.{NP} [.D a ] [.N bird ]  ] [.{VP} [.{} [.V hit ] ] [.{NP} [.D the ] [.N car ]]  ] ]
+    \caption{A syntax tree with phrasal and lexical category labels}
+    \label{fig:abirdhitthecar_phrasal}
 \end{figure}
 
-\section{Grammatical function}
+\subsection{Grammatical function}
 
 The last of our three foundational pillars of syntax is \textbf{grammatical function}. The function
 of a constituent denotes its relationship either to the larger construction containing it to to
@@ -151,35 +151,39 @@ another element within that construction. The term `construction' is not defined
 to mean a phrase when considered as a structure whose elements are related to each other and which
 may be related to higher-level structures.
 
-The major two types of function are \emph{head} and \emph{dependent}. In the noun phrase `a bird',
-the noun `bird' is the head and the determinative `a' is a dependent of the construction.
+The major two types of function are \emph{head} and \emph{dependent}. In the noun phrase \emph{a
+bird}, the noun \emph{bird} is the head and the determinative \emph{a} is a dependent of the
+construction.
 
 Each construction has at most one (and usually exactly one) \textbf{head}, its most important
 element. Generally, the category of a phrase depends on that of the head: a phrase with a noun as a
 head is a noun phrase, a phrase with a verb phrase as a head is a clause.
 
-A phrase can contain more than one dependent. Consider the verb phrase `gave the key to the
-landlord'. Its head is the verb `gave'. It has two dependents: `the key', a noun phrase and `to the
-landlord', a preposition phrase.
+A phrase can contain more than one dependent. Consider the verb phrase \emph{gave the key to the
+landlord}. Its head is the verb \emph{gave}. It has two dependents: \emph{the key}, a noun phrase
+and \emph{to the landlord}, a preposition phrase.
 
 Depending on the category of the construction at hand, we assign special names to the head and
 dependents. For instance, a canonical clause has two constituents: a \textbf{subject} and a
 \textbf{predicate}. Here, predicate is just a special case of head and subject is a special case of
 dependent. The subject canonically takes the form of a noun phrase and the predicate a verb phrase.
 
-We see this in Figure \ref{fig:abirdhitthecar_functional_phrasal} where `a bird' is the subject
-(dependent) and `hit the car' is the predicate (head) of the clause. We use a triangle (or roof)
-over a constituent to show that the analysis is not complete to the lexical level.
+We see this in Figure \ref{fig:abirdhitthecar_functional_phrasal} where \emph{a bird} is the subject
+(dependent) and \emph{hit the car} is the predicate (head) of the clause. We use a triangle (or
+roof) over a constituent to show that the analysis is not complete to the lexical level.
+
+Diagramatically, it would make most sense to display grammatical function labels on the edges of the
+syntax tree, but for the sake of convenience, we instead label the nodes.
 
 \begin{figure}[ht]
-\Tree [.Clause \qroof{a bird}.{Subject: \\ NP}  \qroof{hit the car}.{Predicate: \\ VP} ]
-\caption{A syntax tree with functional and phrasal labels}
-\label{fig:abirdhitthecar_functional_phrasal}
+    \Tree [.Clause \qroof{a bird}.{Subject: \\ NP}  \qroof{hit the car}.{Predicate: \\ VP} ]
+    \caption{A syntax tree with functional and phrasal labels}
+    \label{fig:abirdhitthecar_functional_phrasal}
 \end{figure}
 
 A phrase can have more than one dependent. In Figure \ref{fig:two_dependents_phrase}, we have a
-syntax tree for the verb phrase `gave the key to the landlord'. The head of a verb phrase is called
-a predicator and is a verb. Here, the verb `gave' is the head (predicator). Here the verb phrase has
+syntax tree for the verb phrase \emph{gave the key to the landlord}. The head of a verb phrase is called
+a predicator and is a verb. Here, the verb \emph{gave} is the head (predicator). Here the verb phrase has
 two dependents: one an `object' and one a `complement'.
 
 \begin{figure}[ht]
@@ -190,19 +194,67 @@ two dependents: one an `object' and one a `complement'.
 \end{figure}
 
 The previous example shows an important distinction between syntactic categories and grammatical
-functions. Whereas the phrase `the key' is always a noun phrase in any context, its grammatical
-function depends fundamental on the context. In the clause, `the key is shiny', the phrase `the key'
-is a subject. But the same phrase is an object in the clause, `Bob stole the key'.
+functions. Whereas the phrase \emph{the key} is always a noun phrase in any context, its grammatical
+function depends fundamental on the context. In the clause, \emph{the key is shiny}, the
+phrase\emph{the key} is a subject. But the same phrase is an object in the clause, \emph{Bob stole
+the key}.
 
-Not every construction has a head. The phrase `fish and chips' is, syntactically, a NP-coordination.
-This is syntactic structure we have not yet seen so far. It is a NP and  also a
+Not every construction has a head. The phrase \emph{fish and chips} is, syntactically, a
+NP-coordination. This is syntactic structure we have not yet seen so far. It is a NP and  also a
 \textbf{coordination}, this being a relation between two or more elements of syntactically equal
 status, the \textbf{coordinates}, usually linked by a \textbf{coordinator} such as \emph{and} or
 \emph{or}.
 
-Notably, `fish and chips' has no head. Instead it has two dependents, the coordinate `fish' and the
-coordinate `and chips', each of which is a NP. The phrase `and chips' can be further analysed into
-the marker `and' (a coordinator) and the coordinate `chips' (a NP). An example similar to this, `Kim
-and Pat' is diagrammed in Chapter 11, Section 1.1 of CGEL.
+Notably, \emph{fish and chips} has no head. Instead it has two dependents, the coordinate
+\emph{fish} and the coordinate \emph{and chips}, each of which is a NP. The phrase \emph{and chips}
+can be further analysed into the marker \emph{and} (a coordinator) and the coordinate \emph{chips}
+(a NP). An example similar to this, \emph{Kim and Pat} is diagrammed in Chapter 11, Section 1.1 of
+CGEL.
+
+\subsection{Morphology}
+
+Morphology is concerned with the shape of words and lexemes. Exactly what constitutes a word isn't
+made explicit in CGEL, except to say that a \textbf{word} is the smallest unit of syntax. As I
+understand it, this means that two tokens are instances of the same word if they are identical as
+strings and are syntactically equal.
+
+Thus, the occurrences of \emph{dog} in \emph{I fed the dog} and \emph{the dog fed me} represent the same
+word. Though \emph{dog} is (head of) the object in the first phrase and (head of) subject in the second
+and thus the occurrences show a different in \emph{grammatical function}, from a purely
+\emph{syntactic} point of view, they are identical. They are both nouns.
+
+It is still unclear to me whether the two occurrences of the string \emph{read} in the sentences
+\emph{I read the book} and \emph{Will you read the book?} represent the same word. They are
+identical as strings, they both belong to the lexical category \emph{verb}, but one is a present
+tense and the other is a past tense. I don't believe CGEL refers to tense as a syntactic category,
+but it is referred to as a syntactic property.
+
+More simply, \emph{walk} and \emph{walked} denote different words as they are different strings,
+even though they are clearly related. We say instead that \emph{walk} and \emph{walked} are forms of
+the same \textbf{lexeme}.
+
+Here, a lexeme is a set of words that represent roughly the same notion, but exhibit
+\textbf{inflection} (a change of form) to reflect some syntactic property. Here, \emph{walk} is a
+present tense \textbf{inflectional form} and \emph{walked} is a past tense inflectional form of the
+same lexeme.
+
+In CGEL, a bold emphasised font is used to denote the lexeme represented by the given word. Thus,
+\textbf{\emph{walk}} is the lexeme of which \emph{walk} is an inflectional form. 
+'
+The study of morphology has two aspects: \textbf{inflectional morphology} and \textbf{lexical
+word-formation}.
+
+Inflectional morphology is concerned with how a \textbf{lexical base} is modified to give the
+inflectional form corresponding to a given syntactic property. Thus the lexical base \emph{car} is
+modified with the suffix \emph{\textperiodcentered s} to give the inflectional form \emph{cars}.
+This reflects the value of the syntactic property of \emph{number} which here is \emph{plural}.
+
+In contrast, lexical word-formation is concerned with the construction of lexical bases. This can
+happen in one of three ways. The lexical base \emph{bluebird} is formed by \textbf{compounding} the
+bases \emph{blue} and \emph{bird}; the base \emph{quickly} is a \textbf{derivation} formed by adding
+the affix (here the suffix \emph{\textperiodcentered ly}) to the base \emph{quick}; finally, the
+lexical base \emph{pencil} used as a verb (for instance in the phrase \emph{I will pencil you in})
+is a \textbf{conversion} of the lexical base \emph{pencil} used as a noun.
+
 
 \end{document}
