fleshed out notional, general, and language-specific definitions

--- a/cambridge_grammar.tex
+++ b/cambridge_grammar.tex
@@ -259,9 +259,39 @@ is a \textbf{conversion} of the lexical base \emph{pencil} used as a noun.
 \subsection{Definitions}
 
 There are three ways to define concepts in grammar: `notional', `general', and `language-particular'
-definitions. 
+definitions. We can use any of these approaches to define concepts such as \emph{noun}, \emph{verb},
+\emph{preterite}, \emph{imperative}, etc. 
 
-BLAH BLAH Say something about
+\emph{Language-particular definitions} (those used primarily in CGEL) are those than focus on the
+grammatical properties (specific to the proposed grammar of the English language) one can use to
+distinguish one concept from another. For example, part of the definition of \emph{noun} is that,
+`nouns prototypically inflect for number (singular vs plural) and for case (plan vs genitive)'.
+
+This is to be contrasted with traditional \emph{notional definitions} that attempt to define
+grammatical concepts in terms of the meaning of the concept being defined. A typical notational
+definition of noun would be `the name of a person, place, or thing'. This is an unsatisfactory
+definition as there are many abstract nouns, such as \emph{rejection} in English that do not
+obviously deserve to belong in the category of `things' any more than do related verbs such as
+\emph{rejected}.
+
+None the less, something like the notional definition is of value in a context in which we are
+interested in languages in general. Certainly the grammatical properties of nouns in French are not
+the same as those in English. It is therefore sensible to give \emph{general definitions}, based in
+meaning, that apply in any language, as long as the category is grammatically distinct from others.
+
+For example, a general definition of noun might be, `a grammatically distinct category of lexemes of
+which the morphologically most elementary members characteristically denote types of physical
+object'.
+
+The idea is that the general definition of a given concept should make sense for any given language
+as long as there is, for that language, a language-specific definition that is based purely on
+grammatical properties (and hence the category is `grammatical distinct' from other categories).
+
+Thus there are many examples of grammatical case that have no meaning in English. For instance, the
+dative case is meant (by general definition) to mark the indirect object. But though we have
+indirect objects in English, they are not inflected. For instance, it would be meaningless to say
+that \emph{the dog} is in the dative case in \emph{I gave the bone to the dog} as \emph{the dog} is
+not marked as being an indirect object.
 
 \subsection{Semantics}
 
