write a skeleton for semantics and pragmatics

--- a/cambridge_grammar.tex
+++ b/cambridge_grammar.tex
@@ -262,12 +262,12 @@ There are three ways to define concepts in grammar: `notional', `general', and `
 definitions. We can use any of these approaches to define concepts such as \emph{noun}, \emph{verb},
 \emph{preterite}, \emph{imperative}, etc. 
 
-\emph{Language-particular definitions} (those used primarily in CGEL) are those than focus on the
+\textbf{Language-particular definitions} (those used primarily in CGEL) are those than focus on the
 grammatical properties (specific to the proposed grammar of the English language) one can use to
 distinguish one concept from another. For example, part of the definition of \emph{noun} is that,
 `nouns prototypically inflect for number (singular vs plural) and for case (plan vs genitive)'.
 
-This is to be contrasted with traditional \emph{notional definitions} that attempt to define
+This is to be contrasted with traditional \textbf{notional definitions} that attempt to define
 grammatical concepts in terms of the meaning of the concept being defined. A typical notational
 definition of noun would be `the name of a person, place, or thing'. This is an unsatisfactory
 definition as there are many abstract nouns, such as \emph{rejection} in English that do not
@@ -276,7 +276,7 @@ obviously deserve to belong in the category of `things' any more than do related
 
 None the less, something like the notional definition is of value in a context in which we are
 interested in languages in general. Certainly the grammatical properties of nouns in French are not
-the same as those in English. It is therefore sensible to give \emph{general definitions}, based in
+the same as those in English. It is therefore sensible to give \textbf{general definitions}, based in
 meaning, that apply in any language, as long as the category is grammatically distinct from others.
 
 For example, a general definition of noun might be, `a grammatically distinct category of lexemes of
@@ -293,8 +293,15 @@ indirect objects in English, they are not inflected. For instance, it would be m
 that \emph{the dog} is in the dative case in \emph{I gave the bone to the dog} as \emph{the dog} is
 not marked as being an indirect object.
 
-\subsection{Semantics}
+\subsection{Semantics and pragmatics}
 
-Semantics is concerned with the meaning of 
+\large{TODO:} discuss:
+\begin{enumerate}
+    \item The division between semantics and pragmatics.
+    \item Concepts of semantics: truth conditions, entailment, sentences, propositions,
+	illocutionary meaning, conventional implicature.
+    \item Concepts of pragmatics: conversational implicature, presupposition.
+\end{enumerate}
+
 
 \end{document}
