add a spellfile truth-conditional meaning starting with non-truth-conditional meaning

--- a/cambridge_grammar.tex
+++ b/cambridge_grammar.tex
@@ -303,5 +303,75 @@ not marked as being an indirect object.
     \item Concepts of pragmatics: conversational implicature, presupposition.
 \end{enumerate}
 
+English sentences, and smaller grammatical units, have meaning. CGEL divides the study of meaning
+into two parts: semantics and pragmatics.
+
+In CGEL, \textbf{semantics} `deals with the sense conventionally assigned to sentences independently
+of the contexts in which they might be uttered'. Conversely, \textbf{pragmatics} concerns the ways
+in which an utterance conveys meaning implicitly (though not explicitly) in some contexts but not in
+others.
+
+The distinction between semantics and pragmatics is best drawn out by understanding truth
+conditions, entailment and implicature.
+
+\paragraph{Truth-conditional aspects of meaning}
+
+CGEL uses the phrase \textbf{truth conditions} for `the conditions under which [the sentence] would
+be used to make a true statement'. Clearly, there is no unique set of truth conditions for any given
+sentence. Perhaps the authors mean by `truth conditions', the set of all sets of conditions under
+which the given sentence would be true. Alternatively, the authors state, `to describe the truth
+conditions of [a particular sentence] is to say what conditions would have to be satisfied in order
+for the proposition it was used to assert in particular contexts to be true'.
+
+The distinction between sentence and \textbf{proposition} is readily seen by considering the
+sentence, \emph{Geoff ate the cake}. The sentence itself cannot be said either to be true or not
+true until we have assigned an interpretation to \emph{Geoff} and \emph{the cake}. I believe this is
+what the authors of CGEL mean by `context'. Thus a proposition (or more specifically a
+\textbf{closed proposition}) is a sentence together with a context under which the sentence could be
+assigned a truth value. This definition isn't made explicit in CGEL.
+
+One way (not the only way!) in which the authors define two sentences to have the same
+\textbf{meaning} is if they have the same truth conditions. With this definition, it is clear that
+\emph{Geoff ate the cake} and \emph{The cake was eaten by Geoff} have the same meaning even though
+they are syntactically very different. Indeed, \emph{Geoff} is the subject of the first sentence but
+belongs to the predicate of the second sentence.
+
+Yet another way to consider the same idea comes via the lens of entailment. We say that the sentence
+$X$ \textbf{entails} $Y$ if under any situation for which $X$ is true, then $Y$ must also be true.
+That is, whenever $X$ is true, $Y$ is necessarily true. The relation `$X$ entails $Y$' is said to be
+an \textbf{entailment}.
+
+From the above definition, if $X$ entails $Y$ then $Y$ is a truth condition for $X$, at least
+according to CGEL. I'm slightly uncomfortable with this as it isn't clear that sentences and
+conditions are the same category of object.
+
+Putting aside this objection for the moment, it is readily seen that to know the entailments of a
+sentence is to know its truth conditions.
+
+\paragraph{Non-truth-conditional aspects of sentence meaning}
+
+The truth-conditional view of meaning does not fully capture our intuitive notion of meaning. A
+question cannot be said to have meaning under this definition. None the less, CGEL asserts that both
+\emph{Geoff ate the cake} and \emph{Did Geoff eat the cake?}\ \textbf{express} the same same
+proposition, the former to assert the proposition and the latter to question it.
+
+Likewise,  open interrogative sentences can be viewed as expressing a proposition is through the
+notion of open propositions. 
+
+\begin{quote}
+    a.\;\emph{What does Bob play?}\qquad b.\;\emph{Bob plays $x$}
+\end{quote}
+
+An \textbf{open proposition} is a sentence that contains a placeholder, as in [b] above.  This
+becomes a \textbf{closed proposition} when $x$ is replaced with something concrete. Thus,
+substituting \emph{the piano} for $x$ leads to \emph{Bob plays the piano}. Of course, technically,
+neither open propositions nor closed propositions are actually propositions in the sense we have
+encountered so far, instead they are sentences that could represent propositions in an appropriate
+context. 
+
+An \textbf{open interrogative sentence}, such as [a] above is one that is a request for a value $t$
+such that the result of substituting $t$ for $x$ in a corresponding open proposition is a is a true
+proposition.
+
 
 \end{document}
